# BEVFusion-ROS-TensorRT

./: CMakeLists.txt  LICENSE  README.md  package.xml
include_plugin/: bevfusion_plugin.hpp
include_ros/: bevfusion_node.hpp  bevfusion_plugin.hpp  bevfusion_ros.hpp
launch/: 1.rviz  bevfusion.launch.py  bevfusion_node.launch  view.rviz
model/: readme.md
scripts/: ocr.py
src/: main.cpp  test.cpp
src/bevfusion/: bevfusion.cpp  camera-normalization.cu  lidar-scn.hpp
src/common/: tensor.cu  tensor.hpp  timer.hpp  visualize.cu  visualize.hpp
src_plugin/: 01test.cpp  02test.cpp  CMakeLists.txt  bevfusion_plugin.cpp
src_ros/: 02test.cpp  bevfusion_node.cpp  bevfusion_plugin.cpp  bevfusion_plugin.hpp  bevfusion_ros.cpp  bevfusion_ros_node.cpp  demo.cpp  main.cpp  readme.md
tool/: environment.sh  environment_src.sh
